# docs/swagger.json
@@ -55,7 +55,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/zwei.RecipeListItem"
+                                "$ref": "#/definitions/types.RecipeListItem"
                             }
                         }
                     }
@@ -86,7 +86,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/zwei.RecipeListItem"
+                                "$ref": "#/definitions/types.RecipeListItem"
                             }
                         }
                     }
@@ -165,7 +165,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/zwei.RecipeListItem"
+                                "$ref": "#/definitions/types.RecipeListItem"
                             }
                         }
                     }
@@ -1223,7 +1223,7 @@
                     "type": "string"
                 },
                 "recipe": {
-                    "$ref": "#/definitions/zwei.RecipeListItem"
+                    "$ref": "#/definitions/types.RecipeListItem"
                 },
                 "recipe_id": {
                     "type": "string"
@@ -1270,7 +1270,7 @@
             "type": "object",
             "properties": {
                 "recipe": {
-                    "$ref": "#/definitions/zwei.RecipeListItem"
+                    "$ref": "#/definitions/types.RecipeListItem"
                 },
                 "recipe_id": {
                     "type": "string"
@@ -1643,7 +1643,7 @@
                     }
                 },
                 "tags": {
-                    "$ref": "#/definitions/zwei.TagsGrouped"
+                    "$ref": "#/definitions/types.TagsGrouped"
                 },
                 "total_time_minutes": {
                     "type": "integer"
@@ -1787,11 +1787,10 @@
                     "type": "string"
                 },
                 "reason": {
-                    "description": "该菜品的推荐理由",
                     "type": "string"
                 },
                 "tags": {
-                    "$ref": "#/definitions/zwei.TagsGrouped"
+                    "$ref": "#/definitions/types.TagsGrouped"
                 },
                 "total_time_minutes": {
                     "type": "integer"
@@ -1927,7 +1926,7 @@
                 }
             }
         },
-        "zwei.RecipeListItem": {
+        "types.RecipeListItem": {
             "type": "object",
             "properties": {
                 "category": {
@@ -1949,14 +1948,14 @@
                     "type": "string"
                 },
                 "tags": {
-                    "$ref": "#/definitions/zwei.TagsGrouped"
+                    "$ref": "#/definitions/types.TagsGrouped"
                 },
                 "total_time_minutes": {
                     "type": "integer"
                 }
             }
         },
-        "zwei.TagsGrouped": {
+        "types.TagsGrouped": {
             "type": "object",
             "properties": {
                 "cuisines": {
